# modular-runtime

./: .gitignore  .prettierignore  AGENTS_LOCAL.md  CI_SETUP.md  DEMO_PLAN.md  README.md  aggregate-results.ndjson  ci.config.ts  ci.js  cli.config.ts  cspell.json  eslint.config.js  generate-stats.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-protoc-plugins.sh  tsconfig.json
.github/workflows/: ci-pages.yml
apps/aggregate-service/: package.json  tsconfig.json
apps/aggregate-service-go/: go.mod  main.go  package.json
apps/aggregate-service-go/scripts/: gen-proto.mjs  gen-proto.sh
apps/aggregate-service/src/: aggregate-service.ts  aggregate.test.ts  aggregate.ts  workitem-processor.ts
apps/calculator-client/: package.json  vite.config.ts
apps/calculator-client-cpp/: CMakeLists.txt  package.json
apps/calculator-client-cpp/src/: main.cpp
apps/calculator-client-rust/: Cargo.toml  package.json
apps/calculator-client-rust/src/: main.rs  proto.rs  topology_reporter.rs
apps/calculator-client/src/: calculator-client.ts
apps/calculator-server/: package.json  vite.config.ts
apps/calculator-server-rust/: Cargo.toml  package.json
apps/calculator-server-rust/src/: main.rs
apps/calculator-server/src/: calculator-server.ts
apps/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
apps/dashboard/src/: App.tsx  main.ts  main.tsx  styles.css
apps/demo-domain/aggregate-service/: package.json  tsconfig.json  vite.config.ts
apps/demo-domain/aggregate-service-go/: .gitignore  main.go  package.json  workitem.go
apps/demo-domain/event-generator/: tsconfig.json  vite.config.ts
apps/demo-domain/event-pipeline-monolith/: CMakeLists.txt  package.json
apps/demo-domain/ingest-service/: package.json  vite.config.ts
apps/demo-domain/parse-service/: package.json  vite.config.ts
apps/demo-domain/parse-service-rust/: Cargo.toml  OPTIMIZATION.md  package.json
apps/demo-domain/pipeline-orchestrator/: README.md  package.json
apps/demo-domain/rules-service/: package.json  vite.config.ts
apps/demo-domain/rules-service-python/: package.json
apps/demo-domain/sink-service/: package.json  vite.config.ts
apps/event-generator/: package.json  tsconfig.json  vite.config.ts
apps/event-generator/src/: event-generator.ts
apps/event-pipeline-monolith/: CMakeLists.txt
apps/event-pipeline-monolith/src/: main.cpp  metrics.cpp  metrics.hpp  queue.hpp
apps/event-pipeline-monolith/src/threads/: parser.cpp  parser.hpp  reader.cpp  reader.hpp  writer.hpp
apps/ingest-service/: package.json
apps/ingest-service/src/: ingest-service.test.ts  ingest-service.ts  workitem-generator.ts
apps/parse-service/: package.json  vite.config.ts
apps/parse-service-rust/: Cargo.toml  package.json
apps/parse-service-rust/src/: main.rs  proto.rs  workitem.rs
apps/parse-service/src/: parse-service.ts  parse.test.ts  parse.ts  workitem-processor.ts
apps/pipeline-orchestrator/: vite.config.ts
apps/pipeline-orchestrator/src/: pipeline-orchestrator.ts
apps/rules-service/: package.json
apps/rules-service-python/: .gitignore  package.json  requirements.txt
apps/rules-service-python/scripts/: gen-proto.mjs  gen-proto.sh
apps/rules-service-python/src/: rules_service.py  workitem_processor.py
apps/rules-service/src/: rules-service.ts  rules.test.ts  rules.ts  workitem-processor.ts
apps/sink-service/: package.json  vite.config.ts
apps/sink-service/src/: sink-service.ts
apps/supervisor/: config.yaml  package.json  vite.config.ts
apps/supervisor/src/: supervisor.ts  supervisor.tsx
apps/topology/: README.md  package.json  vite.config.ts
apps/topology-proxy/: package.json  tsconfig.json  vite.config.ts
apps/topology-proxy/src/: topology-proxy.ts
apps/topology-reporter-proxy/: README.md  package.json  tsconfig.json  vite.config.ts
apps/topology-reporter-rust/: Cargo.toml
apps/topology-service/: package.json  vite.config.ts
apps/topology/src/: config.ts  (+6 more)
docs-site/: ENHANCEMENTS.md  package.json
docs-site/docs/: index.md
examples/demo-scenarios/: METRICS-ANALYSIS.md  METRICS-SUMMARY.md  README.md  RESULTS.md  run-monolith.mjs  run-split-pipeline.mjs  test-batching.mjs  test-metrics.mjs
(+62 files in other folders)
