[package]
name = "calculator-client-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
prost = "0.13.3"
rand = "0.8.5"
tokio = { version = "1.37.0", features = [
   "macros",
   "rt-multi-thread",
   "signal",
   "time",
] }
tonic = { version = "0.12.3", features = ["transport"] }
