[package]
name = "calculator-server-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
hostname = "0.4.0"
prost = "0.13.3"
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tonic = { version = "0.12.3", features = ["transport"] }
topology-reporter-rust = { path = "../topology-reporter-rust" }
