[package]
name = "parse-service-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.38"
prost = "0.13.3"
serde_json = "1.0.122"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.16"
tonic = { version = "0.12.3", features = ["transport"] }
